fix centering in pre-register on safari

--- a/village/sass/_globals.scss
+++ b/village/sass/_globals.scss
@@ -337,6 +337,7 @@ Pre-Register
     .section-copy{
         position:absolute;
         right:0;
+        height:100%;
         padding:0 60px 0 0;
         max-width:550px;
         h3{
